screwing about with edeliver

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -210,6 +210,7 @@ ul.projects, ul.cards {
 
 .more-info {
   a {
+    font-size: 1rem;
     display: inline-block;
     font-weight: $f-semi-bold;
     border-bottom: 1px solid $highlight-color-2;
